bug/wont scroll on click on mobile screens

--- a/Brayden-Portfolio/src/index.css
+++ b/Brayden-Portfolio/src/index.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+/* @layer components {
+  .anchor::before {
+    @apply block;
+    height: 60px;
+    margin-top: 60px;
+    visibility: hidden;
+  }
+} */
+
 @layer base {
   :root {
     --text-primary: #f3f3f3;
